@@ -11,7 +11,7 @@ exec wish "$0" "$@"
 # ".tcl" files is this directory, which are sourced by this script
 # as needed.
 #
-# RCS: @(#) $Id: widget,v 1.25 2004/11/07 17:28:21 dkf Exp $
+# RCS: @(#) $Id: widget,v 1.26 2004/11/07 22:41:11 dkf Exp $
 
 package require Tcl	8.5
 package require Tk	8.5
@@ -329,6 +329,8 @@ addDemoSection "Common Dialogs" {
 }
 addDemoSection "Animation" {
     anilabel	"Animated labels"
+    aniwave	"Animated wave"
+    pendulum	"Pendulum simulation"
 }
 addDemoSection "Miscellaneous" {
     bitmap	"The built-in bitmaps"
